src/yini_test/cases/golden/strict/valid/booleans-and-null/null-explicit-keyword.strict.yini
@yini strict

^ Values
key = null

/END

