src/yini_test/cases/golden/strict/invalid/strings/unquoted-string-value.strict.yini
@yini strict

^ Strings
key = hello

/END
